@@ -1,3 +1,10 @@
+1998-07-27  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
+
+	* module.cc (HAND_ADC): New const.
+	(HAND_SC): New const.
+	(HAND_SR): New const.
+	(draw_clock): Use them.
+
 1998-07-23  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
 	* glclock.cc (glclock): Add an exception handler.
